# flask_blog

./: .gitignore  README.md  dev.py  pyproject.toml  wsgi.py
app/: admin.py  api.py  app.py  auth.py  forms.py  models.py  tools.py  views.py
app/static/: highlight.min.js  style.css
app/templates/: 404.html  alert.html  base.html  footer.html  index.html  single.html
app/templates/admin/: base.html  editor.html  home.html  settings.html
